package_final/objects/Country2__c.object
<CustomObject>
    <fields>
        <fullName>Capital__c</fullName>
        <label>Capital</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_global</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>alpha2Code__c</fullName>
        <description>alpha2Code</description>
        <label>alpha2Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alpha3Code__c</fullName>
        <externalId>true</externalId>
        <label>alpha3Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>regionalBlocs_acronym__c</fullName>
        <label>Regional Blocs Acronym</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>